Added suggested categories. Added title casing to categories
